Deformation Motion Blur for modifiers #40616

Closed
opened 2014-06-14 14:42:07 +02:00 by Sławomir Kur · 11 comments

System Information
x86_64 GNU/Linux 3.14.5-1-ARCH

Blender Version
Broken: 2.71 RC1, 169c95b
Worked: N/A

Short description of error
Cycles motion blur not working with animated modifiers (eg. array with transformation).
But I found a workaround - add a hook solves the problem.

gif & blend: On the left - object with hook, On the right - object without hook.
https://dl.dropboxusercontent.com/u/23909696/hosting/1.gif
https://dl.dropboxusercontent.com/u/23909696/hosting/motion-blur-modifiers.blend

btw: adding files not works for me. Only drag&drop way?, please add option about selecting files in file manager.

Exact steps for others to reproduce the error

  1. Add object with array modifier
  2. Add empty with transform animation (rot/loc/scale)
  3. In the object with modifier select 'empty' as Object Offset.
**System Information** x86_64 GNU/Linux 3.14.5-1-ARCH **Blender Version** Broken: 2.71 RC1, 169c95b Worked: N/A **Short description of error** Cycles motion blur not working with animated modifiers (eg. array with transformation). But I found a workaround - add a hook solves the problem. gif & blend: On the left - object with hook, On the right - object without hook. https://dl.dropboxusercontent.com/u/23909696/hosting/1.gif https://dl.dropboxusercontent.com/u/23909696/hosting/motion-blur-modifiers.blend btw: adding files not works for me. Only drag&drop way?, please add option about selecting files in file manager. **Exact steps for others to reproduce the error** 1. Add object with array modifier 2. Add empty with transform animation (rot/loc/scale) 3. In the object with modifier select 'empty' as Object Offset.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @gethiox

Added subscriber: @gethiox

#42105 was marked as duplicate of this issue

#42105 was marked as duplicate of this issue

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Author

And I see in gif something else about motion blur - why last segment of array modifier is blured so "sharply"? It shouldn't looks more like curve? This is a result of sampling, or what? The move on last segment are really fast.

And I see in gif something else about motion blur - why last segment of array modifier is blured so "sharply"? It shouldn't looks more like curve? This is a result of sampling, or what? The move on last segment are really fast.

Added subscriber: @brecht

Added subscriber: @brecht

I can confirm the issue, we're not properly detecting all cases when modifiers are animated.

As for the sharpness, you could try using more motion steps. I doesn't look very wrong to me though, you often get this kind of thing with motion blur. If we implement control over shutter open/motion timing then there is more control over the look, for now it's assumed the shutter opens and closes immediately, which is not entirely realistic.

I can confirm the issue, we're not properly detecting all cases when modifiers are animated. As for the sharpness, you could try using more motion steps. I doesn't look very wrong to me though, you often get this kind of thing with motion blur. If we implement control over shutter open/motion timing then there is more control over the look, for now it's assumed the shutter opens and closes immediately, which is not entirely realistic.
Sergey Sharybin self-assigned this 2014-07-21 17:36:14 +02:00

Added subscribers: @gandalf3, @mont29, @Sergey

Added subscribers: @gandalf3, @mont29, @Sergey

This issue was referenced by 117edbbf88

This issue was referenced by 117edbbf881be1764db852d9805c523590a19f84

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 117edbbf88.

Closed by commit 117edbbf88.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40616
No description provided.